Judge/Temporary_Error/229.log
In file included from ./temp/229/code.cpp:2:0:
D:/OpenJudge/Php/LoadData.php:20:31: warning: character constant too long for its type
     date_default_timezone_set('Asia/Shanghai');
                               ^
D:/OpenJudge/Php/LoadData.php:26:26: warning: character constant too long for its type
     $con = mysql_connect('127.0.0.1', 'openjudge', SQL_PASSWORD); //数据库用户名，密码
                          ^
D:/OpenJudge/Php/LoadData.php:26:39: warning: character constant too long for its type
     $con = mysql_connect('127.0.0.1', 'openjudge', SQL_PASSWORD); //数据库用户名，密码
                                       ^
D:/OpenJudge/Php/LoadData.php:29:16: warning: character constant too long for its type
         header('Location: /Message.php?Msg=数据库连接失败');
                ^
D:/OpenJudge/Php/LoadData.php:31:5: error: stray '@' in program
     @mysql_select_db("openjudge", $con);
     ^
D:/OpenJudge/Php/LoadData.php:32:5: error: stray '@' in program
     @oj_mysql_query('set names utf8');
     ^
D:/OpenJudge/Php/LoadData.php:32:18: warning: character constant too long for its type
     @oj_mysql_query('set names utf8');
                  ^
D:/OpenJudge/Php/LoadData.php:38:21: warning: character constant too long for its type
     $WebName = $row['oj_name'];
                     ^
D:/OpenJudge/Php/LoadData.php:39:22: warning: character constant too long for its type
     $WebTitle = $row['oj_title'];
                      ^
D:/OpenJudge/Php/LoadData.php:40:26: warning: character constant too long for its type
     $WebHtmlTitle = $row['oj_html_title'];
                          ^
D:/OpenJudge/Php/LoadData.php:41:24: warning: character constant too long for its type
     $JudgeMac_1 = $row['oj_EvaMacState_1'];
                        ^
D:/OpenJudge/Php/LoadData.php:42:24: warning: character constant too long for its type
     $JudgeMac_2 = $row['oj_EvaMacState_2'];
                        ^
D:/OpenJudge/Php/LoadData.php:43:27: warning: character constant too long for its type
     $JudgeMacRunID = $row['oj_runid'];
                           ^
D:/OpenJudge/Php/LoadData.php:44:27: warning: character constant too long for its type
     $JudgeAllRun_1 = $row['oj_allrun_1'];
                           ^
D:/OpenJudge/Php/LoadData.php:45:27: warning: character constant too long for its type
     $JudgeAllRun_2 = $row['oj_allrun_2'];
                           ^
D:/OpenJudge/Php/LoadData.php:51:16: warning: character constant too long for its type
         return '"myuser-base myuser-red"';
                ^
D:/OpenJudge/Php/LoadData.php:53:16: warning: character constant too long for its type
         return '"myuser-base myuser-fire"';
                ^
D:/OpenJudge/Php/LoadData.php:55:16: warning: character constant too long for its type
         return '"myuser-base myuser-orange"';
                ^
D:/OpenJudge/Php/LoadData.php:57:16: warning: character constant too long for its type
         return '"myuser-base myuser-yellow"';
                ^
D:/OpenJudge/Php/LoadData.php:59:16: warning: character constant too long for its type
         return '"myuser-base myuser-purple"';
                ^
D:/OpenJudge/Php/LoadData.php:61:16: warning: character constant too long for its type
         return '"myuser-base myuser-violet"';
                ^
D:/OpenJudge/Php/LoadData.php:63:16: warning: character constant too long for its type
         return '"myuser-base myuser-blue"';
                ^
D:/OpenJudge/Php/LoadData.php:65:16: warning: character constant too long for its type
         return '"myuser-base myuser-cyan"';
                ^
D:/OpenJudge/Php/LoadData.php:67:16: warning: character constant too long for its type
         return '"myuser-base myuser-green"';
                ^
D:/OpenJudge/Php/LoadData.php:96:21: warning: character constant too long for its type
 if (isset($_SESSION['username']) && isset($_SESSION['password'])) {
                     ^
D:/OpenJudge/Php/LoadData.php:96:53: warning: character constant too long for its type
 if (isset($_SESSION['username']) && isset($_SESSION['password'])) {
                                                     ^
D:/OpenJudge/Php/LoadData.php:97:63: warning: character constant too long for its type
     $sql = "SELECT * FROM oj_user where `name`='" . $_SESSION['username'] . "' and `password`='" . $_SESSION['password'] . "' LIMIT 1";
                                                               ^
D:/OpenJudge/Php/LoadData.php:97:110: warning: character constant too long for its type
     $sql = "SELECT * FROM oj_user where `name`='" . $_SESSION['username'] . "' and `password`='" . $_SESSION['password'] . "' LIMIT 1";
                                                                                                              ^
In file included from ./temp/229/code.cpp:2:0:
D:/OpenJudge/Php/LoadData.php:102:26: warning: multi-character character constant [-Wmultichar]
         $LandUser = $row['name'];
                          ^
D:/OpenJudge/Php/LoadData.php:103:34: warning: character constant too long for its type
         $User_Jurisdicton = $row['jurisdicton'];
                                  ^
D:/OpenJudge/Php/LoadData.php:107:35: error: empty character constant
         setcookie(session_name(), '', time() - 3600);
                                   ^
D:/OpenJudge/Php/LoadData.php:111:8: warning: character constant too long for its type
 define('JUR_ADMIN', 2);         //最高权限管理员
        ^
D:/OpenJudge/Php/LoadData.php:112:8: warning: character constant too long for its type
 define('JUR_ONLYVIEWDATA', 1);  //可查看测试点
        ^
In file included from ./temp/229/code.cpp:2:0:
D:/OpenJudge/Php/LoadData.php:1:1: error: expected unqualified-id before '<' token
 <?php
 ^
D:/OpenJudge/Php/LoadData.php:4:7: error: expected constructor, destructor, or type conversion before '(' token
 define("SQL_PASSWORD", "sqlieIAjVBw02");
       ^
D:/OpenJudge/Php/LoadData.php:6:1: error: 'function' does not name a type
 function LoadData()
 ^
D:/OpenJudge/Php/LoadData.php:48:1: error: 'function' does not name a type
 function GetUserColor($Fight)
 ^
D:/OpenJudge/Php/LoadData.php:71:1: error: 'function' does not name a type
 function AlterString($Str)
 ^
D:/OpenJudge/Php/LoadData.php:81:1: error: 'function' does not name a type
 function RestoreString($Str)
 ^
D:/OpenJudge/Php/LoadData.php:90:11: error: expected constructor, destructor, or type conversion before ';' token
 LoadData();
           ^
D:/OpenJudge/Php/LoadData.php:92:1: error: 'global' does not name a type
 global $LandUser;
 ^
D:/OpenJudge/Php/LoadData.php:93:1: error: 'global' does not name a type
 global $User_Jurisdicton;
 ^
D:/OpenJudge/Php/LoadData.php:94:1: error: '$User_Jurisdicton' does not name a type
 $User_Jurisdicton = 0;
 ^
D:/OpenJudge/Php/LoadData.php:96:1: error: expected unqualified-id before 'if'
 if (isset($_SESSION['username']) && isset($_SESSION['password'])) {
 ^
